--- a/style.css
+++ b/style.css
@@ -341,6 +341,10 @@ body {
     transition: all 0.3s;
 }
 
+.Display-btn{
+    background-color:#ccc;
+}
+
 .add-task-btn:hover {
     transform: scale(1.1);
 }
